<resources>
    <string name="app_name">ZWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Login</string>
    <string name="text_login_desc">Login to your existing account to access all the features in Zwallet.</string>
    <string name="hint_email">Enter your email address</string>
    <string name="hint_password">Enter your password</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="slogans">Make easy your payment</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_forgot_password_desc">Enter your Zwallet e-mail so we can send you a password reset link.</string>
    <string name="confirm">Confirm</string>
    <string name="text_new_password_desc">Create and confirm your new password so you can login to Zwallet.</string>
    <string name="hint_create_new_password">Create new password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_sign_up_desc">Create your account to access Zwallet.</string>
    <string name="hint_name">Enter your username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="let_s_login">Let’s Login</string>
    <string name="text_phone">+62 8523 3002 6622</string>
    <string name="text_balance">Rp120.000</string>
    <string name="text_balance_label">Balance</string>
    <string name="notification_image">Notification Image</string>
    <string name="text_name">Grinaldi Wisnu Tri Prasetyo</string>
    <string name="text_hello">Hello,</string>
    <string name="text_find_receiver">Find Receiver</string>
    <string name="back_button">Back Button</string>
    <string name="hint_search_receiver_here">Search receiver here</string>
    <string name="text_all_contact">All Contact</string>
    <string name="transfer">Transfer</string>
    <string name="top_up">Top Up</string>
    <string name="text_transaction_history">Transaction History</string>
    <string name="text_view_all">View All</string>
    <string name="text_continue">Continue</string>
    <string name="add_some_notes">Add some notes</string>
    <string name="transfer_value">0.00</string>
    <string name="text_contact_image">Contact Image</string>
    <string name="text_transfer_to">Transfer to</string>
    <string name="text_details">Details</string>

    <string name="amount">Amount</string>
    <string name="balance">Balance left</string>
    <string name="date">Date &amp; time</string>
    <string name="notes">Notes</string>
    <string name="text_virtual_account_number">Virtual Account Number</string>
    <string name="text_va">2389 081393877946</string>
    <string name="text_topup">We provide you virtual account number for top up via nearest ATM.</string>
    <string name="text_how_to_top_up">How to Top-Up</string>
</resources>