<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:id="@+id/appBarGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/sample_image"
            app:shapeAppearanceOverlay="@style/RoundCornerOverlay" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hello"
                android:textColor="@color/darkGreyColor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textUserName"
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/notification_image"
            android:src="@drawable/ic_baseline_notifications_none_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_balance_card"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarGroup">

        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_balance_label"
            android:textColor="@color/greyColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textUserBalance"
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_balance"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textUserPhone"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone"
            android:textColor="@color/greyColor"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/groupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerBalance">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonTransfer"
            style="@style/TextView.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:drawableStart="@drawable/ic_baseline_arrow_upward_24"
            android:paddingHorizontal="24dp"
            android:paddingVertical="15dp"
            android:text="@string/transfer"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/TextView.Medium"
            android:id="@+id/buttonTopUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:drawableStart="@drawable/ic_baseline_arrow_upward_24"
            android:paddingHorizontal="24dp"
            android:paddingVertical="15dp"
            android:text="@string/top_up"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/textTransactionHistory"
        style="@style/TextView.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_transaction_history"
        android:textColor="#514F5B"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupButton" />

    <TextView
        android:id="@+id/textTransactionAll"
        style="@style/TextView.MainActivity.ViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_view_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTransactionHistory">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTransaction"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="0dp"
            android:isScrollContainer="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_transaction_home" />

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:indeterminateTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>