<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.register.RegisterFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor">

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="100dp"
            style="@style/TextView.SplashScreen"
            android:textColor="@color/primaryColor"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/background_auth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLogo"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/textRegister"
                style="@style/TextView.SplashScreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/text_sign_up"
                android:textAlignment="center"
                android:textColor="@color/darkGreyColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textSignUpDesc"
                style="@style/TextView.SplashScreen.Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_sign_up_desc"
                android:textAlignment="center"
                android:textColor="@color/darkGreyColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textRegister" />

            <EditText
                android:id="@+id/inputName"
                style="@style/EditText.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSignUpDesc" />

            <EditText
                android:id="@+id/inputEmail"
                style="@style/EditText.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputName" />

            <EditText
                android:id="@+id/inputPassword"
                style="@style/EditText.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputEmail" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/TextView.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_button_auth"
                android:paddingHorizontal="24dp"
                android:paddingVertical="15dp"
                android:text="@string/text_sign_up"
                android:textAllCaps="false"
                android:textColor="#88888F"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputPassword" />

            <TextView
                android:id="@+id/textDontHave"
                style="@style/TextView.SplashScreen.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="40dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/darkGreyColor"
                app:layout_constraintEnd_toStartOf="@id/textSignIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <TextView
                android:id="@+id/textSignIn"
                style="@style/TextView.SplashScreen.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="70dp"
                android:text="@string/let_s_login"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>