<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context=".ui.auth.forgot.ChangeNewPasswordFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/backgroundColor">

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="100dp"
            style="@style/TextView.SplashScreen"
            android:textColor="@color/primaryColor"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerForm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/textLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/background_auth">
            <TextView
                android:layout_marginTop="35dp"
                android:id="@+id/textLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_reset_password"
                android:textAlignment="center"
                style="@style/TextView.SplashScreen"
                android:textColor="@color/darkGreyColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_marginHorizontal="60dp"
                android:id="@+id/textLoginDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/text_new_password_desc"
                style="@style/TextView.SplashScreen.Description"
                android:textColor="@color/darkGreyColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLogin"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputPassword"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                style="@style/EditText.Input"
                android:inputType="textPassword"
                android:hint="@string/hint_create_new_password"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:autofillHints="emailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLoginDesc"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputPassword2"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                style="@style/EditText.Input"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_new_password"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:autofillHints="emailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputPassword"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_change_password"
                android:paddingVertical="15dp"
                android:paddingHorizontal="24dp"
                android:layout_margin="16dp"
                android:textColor="#88888F"
                style="@style/TextView.Medium"
                android:textAllCaps="false"
                android:background="@drawable/background_button_auth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>